Created log reader, regex matching, and test output to console

--- a/Jason_log_reader/Jason_log_reader.csproj
+++ b/Jason_log_reader/Jason_log_reader.csproj
@@ -48,6 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="squad_data\log_big.log">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="squad_data\Squad.log" />
+    <None Include="squad_data\Squad_latest.log" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
